--- a/exe/pictest.html
+++ b/exe/pictest.html
@@ -95,7 +95,7 @@
         <canvas id="myCanvas" width="100" height="24"></canvas>
       </div>
       <div class="pictest-left-buttom">
-        <span onclick="aginTest()">看不清？换张图片</span>
+        <span id='selectPic'>看不清？换张图片</span>
       </div>
     </div>
   </div>
@@ -192,6 +192,10 @@
                 ctx.stroke();
             }
         }
+      
+        selectPic.addEventListener('click',function (e) {
+            aginTest()
+        })
 
         function colorSelect() {//随机一种颜色
             color = '';
